content/browser/renderer_host/legacy_render_widget_host_win.cc
@@ -62,14 +62,6 @@ void LegacyRenderWidgetHostHWND::UpdateParent(HWND parent) {
   if (GetWindowEventTarget(GetParent()))
     GetWindowEventTarget(GetParent())->HandleParentChanged();
   ::SetParent(hwnd(), parent);
-  // If the new parent is the desktop Window, then we disable the child window
-  // to ensure that it does not receive any input events. It should not because
-  // of WS_EX_TRANSPARENT. This is only for safety.
-  if (parent == ::GetDesktopWindow()) {
-    ::EnableWindow(hwnd(), FALSE);
-  } else {
-    ::EnableWindow(hwnd(), TRUE);
-  }
 }
 
 HWND LegacyRenderWidgetHostHWND::GetParent() {
